# proxmox

./: .gitignore  .goreleaser.yml  .mise.toml  CLAUDE.md  Dockerfile  FUNCTIONAL_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  PYTHON_DEPRECATION_ANALYSIS.md  QUICK_OPERATIONS_IMPLEMENTATION.md  README.md  SPECIFICATION_README.md  TEST_PLAN.md  TEST_SPECIFICATION.md  go.mod  test-backup-operations.sh
.github/workflows/: release.yml
cmd/: cmd_vm.go  main.go  network.go  node.go  resource.go  task.go
docs/: COMMAND_REFERENCE.md  DEMO_RUNBOOK.md  FUNCTIONAL_SPECIFICATION.md
docs/archive/: IMPLEMENTATION_SUMMARY.md  SPECIFICATION_README.md  TEST_SPECIFICATION.md
legacy/proxmox-vm-manager/: pyproject.toml
modular/: pve-snapshots-cli.py
modular/snapshot-manager/: MODULE_OVERVIEW.md  bulk_operations.py  main.py  snapshot_manager.py  snapshot_operations.py  vm_operations.py
modular/vm-manager/: MODULE_OVERVIEW.md  backup_operations.py  main.py  proxmox_api.py  pyproject.toml  snapshot_integration.py  storage_operations.py  vm_manager.py  vm_selector.py
pkg/backup/: operations.go
pkg/bulk/: operations.go
pkg/config/: config.go  config_test.go
pkg/container/: display.go  operations.go
pkg/network/: display.go  operations.go
pkg/node/: display.go  operations.go
pkg/onepassword/: onepassword.go  onepassword_test.go
pkg/protection/: operations.go
pkg/resource/: operations.go  types.go
pkg/snapshot/: operations.go
pkg/storage/: operations.go
pkg/task/: display.go  operations.go  types.go
pkg/vm/: operations.go
proxmox-admin-cli/: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  Makefile  README.md
proxmox-admin-cli/cmd/: cmd_cluster.go  cmd_vm.go  cmd_vm_bulk.go  container.go  main.go  network.go  node.go  resource.go  storage.go  task.go
proxmox-admin-cli/pkg/api/: client.go
proxmox-snapshot-manager-go/: .gitignore  Dockerfile  Makefile  README.md  go.mod
proxmox-snapshot-manager-go/cmd/: main.go  storage.go
proxmox-snapshot-manager-go/config/: proxmox-snapshot-manager.yaml
pve/: cmd_node.go  cmd_vm_bulk.go  container.go  main.go  storage.go
python/: DEPRECATED.md
python/modular/: pve-snapshots-cli.py
scripts/: README.md  create-api-token.sh  pve-ssh-exec.sh  pve-token.sh  setup-pve-cli-user.sh  test-1password-integration.sh  test-backup-operations.sh
(+27 files in other folders)
